#ifndef MENU_HPP
#define MENU_HPP

#include "player.hpp"
#include "gamemode.hpp"

#include <iostream>
#include <string>

class Menu
{
public:
    Player namePlayer();
    Playmode selectGamemode();


private:

};


#endif //MENU_HPP